добавил изменение названия группы
